# ddhi-encoder

./: .coveragerc  .python-version  README.rst  chilcote_lee.tei.xml  parker_m.tei.xml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/ddhi_encoder/: convert.py  convert_directory.py  interview.py  interview_generator.py  ne_extractor.py  ne_tagger.py  tag_interview.py  update_events.py  utterance.py  word_parser.py
src/ddhi_encoder/modifiers/: modifiers.py
src/ddhi_encoder/standoff_generator/: standoff_generator.py
src/ttu_encoder/: __init__.py  convert.py  convert_directory.py  generate_standoff.py  interview.py  interview_generator.py  mentioned_events.py  mentioned_orgs.py  mentioned_persons.py  mentioned_places.py  skeleton.py  tag_interview.py  teitemplate.xml  test_interview_generator.py  update_events.py  update_orgs.py  update_persons.py  update_places.py  word_parser.py
src/ttu_encoder/aggregators/: aggregators.py
src/ttu_encoder/modifiers/: modifiers.py
tests/: badname.docx  conftest.py  short.docx  test1.tei.xml  test_interview.py  test_interview_generator.py  test_ne_extractor.py  test_ne_tagger.py  test_skeleton.py  test_utterance.py  transcript1.docx
tests/aggregators/: test_aggregators.py
tests/entities/: test_entity.py
tests/modifiers/: events.tsv  lovely.tsv  orgs_raw.tsv  persons.tsv  test_event.py  test_modifiers.py  test_org.py  test_orgs.tsv  test_person.py  test_place.py  test_standoff.py  test_standoff.tei.xml
tests/standoff_generator/: test_standoff_generator.py
tests/transformer/: test.xml  test.xsl  test_transformer.py
