# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = ddhi-encoder
version = "1.3.0"
description = Encoding tools for DDHI
author = Clifford Wulfman
author-email = cliff@agilehumanities.ca
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/agile-humanities/ddhi-encoder/
project-urls =
    Documentation = https://github.com/agile-humanities/ddhi-encoder/blob/master/README.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = docx2python >= 1.19.0
		 lxml >= 4.6.2
		 spacy >= 3.1.0
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
		ddhi_convert = ddhi_encoder.convert:run
		ddhi_tag = ddhi_encoder.tag_interview:run
		ddhi_mentioned_places = ddhi_encoder.mentioned_places:run
		ddhi_mentioned_events = ddhi_encoder.mentioned_events:run
		ddhi_mentioned_persons = ddhi_encoder.mentioned_persons:run
		ddhi_mentioned_orgs = ddhi_encoder.mentioned_orgs:run
		ddhi_update_places = ddhi_encoder.update_places:run
		ddhi_update_events = ddhi_encoder.update_events:run
		ddhi_generate_standoff = ddhi_encoder.generate_standoff:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov ddhi_encoder --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.2.3
package = ddhi_encoder
