# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = ttu-encoder
version = "0.0.1"
description = Encoding tools for VNCA
author = Edie Wilson
author-email = ediewilson13@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/agile-humanities/ttu-encoder/
project-urls =
    Documentation = https://github.com/agile-humanities/ttu-encoder/blob/master/README.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = docx2python >= 1.19.0
		 lxml >= 4.6.2
		 spacy >= 3.1.0
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
		ttu_convert = ttu_encoder.convert:run
		ttu_tag = ttu_encoder.tag_interview:run
		ttu_mentioned_places = ttu_encoder.mentioned_places:run
		ttu_mentioned_events = ttu_encoder.mentioned_events:run
		ttu_mentioned_persons = ttu_encoder.mentioned_persons:run
		ttu_mentioned_orgs = ttu_encoder.mentioned_orgs:run
		ttu_update_places = ttu_encoder.update_places:run
		ttu_update_events = ttu_encoder.update_events:run
		ttu_update_orgs = ttu_encoder.update_orgs:run
		ttu_update_persons = ttu_encoder.update_persons:run
		ttu_generate_standoff = ttu_encoder.generate_standoff:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov ttu_encoder --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 0.0.1
package = ttu_encoder
